--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
 .titleBox {
 	height: 100vh;
  	background-size: cover;
-	background-image: url("C:/Users/cuemi/Downloads/Fondo.jpg");
+	background-image: url("Fondo.jpg");
 	filter: blur(5px);
   	-webkit-filter: blur(5px)
 
